# simbotic-ros

./: .gitignore  .gitmodules  Dockerfile.cpu  Dockerfile.gpu  README.md  bashrc  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  docker_build.sh  docker_run.sh  prosilica.ini  ros_entrypoint.sh  setup.sh
simbotic_catkin_workspace/src/simbotic_ros/: CMakeLists.txt  package.xml
simbotic_catkin_workspace/src/simbotic_ros/src/scripts/: agent.py
