<?xml version="1.0"?>
<package format="2">
  <name>simbotic_ros</name>
  <version>0.0.1</version>
  <description>The simbotic_ros package</description>

  <author email="racsoraul@gmail.com">Raúl Pleitez</author>
  <maintainer email="racsoraul@gmail.com">Raúl Pleitez</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
